<resources>
    <string name="app_name">Lens</string>
    <string name="lens_block_device_info_title">设备信息</string>
    <string name="lens_block_frame_title">帧率信息</string>
    <string name="lens_block_view_touch">触摸日志</string>
    <string name="lens_block_log_title">日志</string>
    <string name="lens_block_second_title">sp</string>
    <string name="lens_block_network_title">网络分析</string>
    <string name="lens_block_permission_title">权限监控</string>
    <string name="lens_block_launch_title">任务分析</string>
    <string name="lens_block_activity_title">页面分析</string>
    <string name="lens_block_enable_debug">SDK debug</string>
    <string name="lens_block_floating_pannel">浮窗模式</string>
    <string name="lens_block_viewinfo_title">控件选择</string>
    <string name="lens_setting_open_status">展开方式</string>
    <string name="lens_setting_open_status_open">展开</string>
    <string name="lens_setting_open_status_min">最小化</string>
    <string name="lens_setting_open_status_close">关闭</string>
    <string name="lens_block_launch_info">任务耗时：%1$s&#160;ms</string>
    <string name="lens_block_frame_info">FPS：%1$d</string>
    <string name="lens_block_activity_info">%1$s/%2$s</string>
    <string name="lens_block_http_count">未开启</string>
    <string name="lens_block_dns_setting">DNS设置</string>
    <string name="lens_network_test">测试环境</string>
    <string name="lens_network_online">线上环境</string>
    <string name="lens_title_bar_title">设置</string>
    <string name="lens_please_open_overlay_permission">Lens 需要悬浮窗权限，点击确定前往开启</string>
    <string name="lens_show_relative_distance">相对距离</string>
    <string name="lens_show_sibling_widget">兄弟组件</string>
    <string name="lens_select_widget">视图拾取</string>
    <string name="lens_block_display">数据展示</string>
    <string name="lens_block_watch">对象监控</string>
    <string name="lens_crash_info">崩溃信息</string>
    <string name="lens_block_watch_refresh">刷新</string>
    <string name="lens_block_shortcut">捷径</string>
    <string name="lens_block_app_setting_detail">清除应用数据</string>
    <string name="lens_block_app_developer_option">开发者选项</string>
    <string name="lens_block_app_change_language">系统语言</string>
    <string name="lens_block_bind">绑定</string>
    <string name="lens_block_bind_remote">远端URL</string>
    <string name="lens_block_bind_remote_hint">扫描网页二维码获取 URL</string>
    <string name="lens_please_check_format">请检查格式是否正确！</string>
    <string name="lens_search_field_hint">搜索字段</string>
    <string name="lens_show_all_parent_fields">全部展示</string>
    <string name="lens_no_widget_selected">该区域没有控件！</string>
    <string name="lens_search_sp_hint">请输入sp的key</string>
    <string name="lens_search_sp_result">查询结果(点击进入编辑或长按复制)：</string>
    <string name="lens_search_sp_result_error">未找到，请确认key</string>
    <string name="lens_search_sp_result_key_value">%1$s : %2$s</string>
    <string name="lens_exception_title">Exception Catch</string>
    <string name="lens_search_sp_result_copy">复制成功</string>
    <string name="lens_version">v0.3.2</string>
    <string name="lens_view_edit_remove_from_parent">从父视图中移除自己</string>
    <string name="lens_view_edit_remove_children">移除子视图</string>
    <string name="lens_common_title_bar_save">保存</string>
    <string name="lens_common_title_bar_edit">编辑</string>
    <string name="lens_edit_toast_save_success">保存成功</string>
    <string name="lens_edit_toast_save_fail">没有修改</string>
    <string name="lens_SharedPreference">SharedPreferences</string>
    <string name="lens_common_title_bar_database">数据库</string>
  <string name="lens_permission_panel_title">权限请求</string>
    <string name="lens_time_gap">Gap</string>
    <string name="lens_time_stamp">Stamp</string>
    <string name="lens_time_threads">Threads</string>
    <string name="lens_save">保存</string>
    <string name="lens_compare">对比</string>
    <string name="lens_setting_system_setting">系统设置</string>
    <string name="lens_setting_wifi_setting">WIFI 列表</string>
    <string name="lens_setting_date_setting">日期修改</string>
    <string name="lens_test_hook">HOOK</string>
    <string name="lens_paste">粘贴</string>
    <string name="lens_view_bg_color_seetting">点击修改背景色</string>
    <string name="lens_ac_view_cate_title">视图分类信息</string>
    <string name="lens_panle_ac_ana_title">界面分析</string>
    <string name="lens_panle_ac_view_tree_title">视图树</string>
    <string name="lens_panle_ac_setting_title">设置</string>
    <string name="lens_panel_net_setting">网络分析设置</string>


</resources>
