<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    >


<!--    title -->


<!--   视图拾取开关 -->
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/block_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="120dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/lens_block_activity_title"
            android:textColor="@color/black_051b28"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_activity_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/black_051b28"
        android:background="@drawable/lens_round_rect_light"
        android:drawableRight="@drawable/lens_right_arrow"
        android:drawablePadding="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/text_size_12" />

    <Switch
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lens_select_widget"
        android:textColor="@color/black_051b28"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        />

<!--    action btns -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/show_distance"
            android:layout_height="wrap_content"
            android:layout_width="90dp"
            android:textSize="10sp"
            android:text="@string/lens_show_relative_distance"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/show_sibling"
            android:layout_height="wrap_content"
            android:layout_width="90dp"
            android:textSize="10sp"
            android:text="@string/lens_show_sibling_widget"
            android:visibility="gone"
            />


    </LinearLayout>

<!--    current widget inf0-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/down_to_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/lens_ic_arrow_left"
                android:text="Next"
                android:textSize="8dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black_051b28"
                />

            <TextView
                android:id="@+id/back_to_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:drawableTop="@drawable/lens_ic_arrow_up"
                android:text="Parent"
                android:textSize="8dp"
                android:textColor="@color/black_051b28"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/up_to_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:drawableTop="@drawable/lens_ic_arrow_left"
                android:text="Row"
                android:textSize="8dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black_051b28"
                />



        </LinearLayout>


        <TextView
            android:id="@+id/currentWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="22dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:background="@drawable/lens_round_rect_light"
            android:textColor="@color/black_051b28"
            android:textSize="@dimen/text_size_10"/>

    </LinearLayout>




</LinearLayout>