<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    >

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lens_view_visibl_setting_group"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lens_view_vis_visible"
        android:text="Visible"
        android:textColor="@color/black"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lens_view_vis_invisible"
        android:text="Invisible"
        android:textColor="@color/black"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lens_view_vis_gone"
        android:text="Gone"
        android:textColor="@color/black"
        />

</RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/lens_view_edit_remove_from_parent"
        android:background="@drawable/lens_round_rect_light"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/lesn_view_edit_remove_parent"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/lens_view_edit_remove_children"
        android:background="@drawable/lens_round_rect_light"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/lesn_view_edit_remove_children"
        android:gravity="center"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/lens_view_bg_color_seetting"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="left"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:background="@color/divider"
                android:textSize="12dp"
                android:text="NO"
                android:gravity="center"
                android:id="@+id/lens_view_setting_bg_none"
                />

            <View android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:id="@+id/lens_view_setting_bg_blk"
                android:background="@color/black"/>

            <View android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:id="@+id/lens_view_setting_bg_wt"
                android:background="@drawable/lens_rec_whit_black_boarder"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:id="@+id/lens_view_setting_bg_red"
                android:background="#ffff0000"/>

            <View android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:id="@+id/lens_view_setting_bg_ylow"
                android:background="#ffff00"/>

            <View android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:id="@+id/lens_view_setting_bg_blu"
                android:background="#ff0000ff"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>